# dekhahobe

./: README.md  pyproject.toml
.github/workflows/: ci.yml
dekhahobe/: hooks.py  modules.txt
dekhahobe/dekhahobe/doctype/event_tickets/: event_tickets.js  event_tickets.json  event_tickets.py  test_event_tickets.py
dekhahobe/dekhahobe/doctype/faqs/: faqs.json  faqs.py
dekhahobe/dekhahobe/doctype/gallery_image/: gallery_image.json  gallery_image.py
dekhahobe/dekhahobe/doctype/group/: group.js  group.json  group.py  test_group.py
dekhahobe/dekhahobe/doctype/group_admin/: group_admin.json  group_admin.py
dekhahobe/dekhahobe/doctype/group_committee_member/: group_committee_member.js  group_committee_member.json  group_committee_member.py  test_group_committee_member.py
dekhahobe/dekhahobe/doctype/meetup/: meetup.js  meetup.json  meetup.py  test_meetup.py
dekhahobe/dekhahobe/doctype/schedule/: schedule.json  schedule.py
dekhahobe/dekhahobe/doctype/speakers/: speakers.js  speakers.json  speakers.py  test_speakers.py
dekhahobe/dekhahobe/doctype/speakers_list/: speakers_list.json  speakers_list.py
dekhahobe/dekhahobe/doctype/ticket_information/: ticket_information.json  ticket_information.py
dekhahobe/dekhahobe/doctype/title_sponsors/: title_sponsors.json  title_sponsors.py
dekhahobe/dekhahobe/web_template/events_card/: events_card.html  events_card.json
dekhahobe/dekhahobe/web_template/events_slider/: events_slider.html  events_slider.json
dekhahobe/dekhahobe/web_template/gallery/: gallery.html  (+1 more)
dekhahobe/templates/pages/: group_page.html
(+3 files in other folders)
